--- a/ex1.html
+++ b/ex1.html
@@ -81,11 +81,11 @@
             }
 
             function ex7(){
-                var age = 6;
+                var age = 10;
                     if(age >= 13){
                         document.getElementById("resultat").innerHTML = "Hors catégorie";
                     }
-                    else if($age >= 12){
+                    else if(age >= 12){
                         document.getElementById("resultat").innerHTML = "Cadet";
                     } else if(age >= 10){
                         document.getElementById("resultat").innerHTML = "Minime";
