--- a/ex1.html
+++ b/ex1.html
@@ -30,6 +30,9 @@
 
     <p>Ecrire un algorithme permettant de renvoyer la catégorie d’un enfant en fonction de son âge</p>
     <button onclick ="ex7()">Resultat EX 7</button>
+
+    <p>Ecrire un algorithme qui renvoie la table de multiplication d’un nombre passé en paramètre</p>
+    <button onclick ="ex8()">Resultat EX 8</button>
     
     <footer>
         <p id="resultat"></p>
