--- a/ex1.html
+++ b/ex1.html
@@ -102,12 +102,11 @@
                 }
 
                 function ex8(){ 
-                    const number = 8;
-                    for(let i= 1; i<=10; i++){
-                        const result = document.getElementById("resultat").innerHTML = i * number;
-                    }
-
-                }
+                    const number = parseInt(prompt('Entrez un entier: '));
+                    for(let i = 1; i <= 10; i++) {
+                        const result = i * number;
+                        console.log(`${number} * ${i} = ${result}`);
+                    }}
 
                 
 
