ex2 page 2 terminé

--- a/ex2.html
+++ b/ex2.html
@@ -12,8 +12,7 @@
     <p>Réaliser un algorithme permettant d’afficher le tableau HTML suivant (notez que le nom du pays
         s’affichera en majuscule et que le tableau est trié par ordre alphabétique du nom de pays) grâce à
         une fonction personnalisée.</p>
-    <p id="test1"></p>
-    <p id="test2"></p>
+    <p id="ex2"></p>
 
     <p>Afficher un lien hypertexte permettant d’accéder au site d’Elan Formation. Le lien devra s’ouvrir
         dans un nouvel onglet (_blank)</p>
@@ -64,9 +63,11 @@
                     Allemagne: "Berlin",
                     Italie: "Rome",
                   }, function(ville, value) {
-                    document.getElementById('test1').innerHTML += `${ville}: ${value}<br>`
+                    document.getElementById('ex2').innerHTML += `${ville}: ${value}<br>`
                   });
 
+
+                  
             </script>
 
         </footer>
