ex 3(page2) en cours

--- a/ex2.html
+++ b/ex2.html
@@ -72,6 +72,9 @@
   
                   }
 
+                let champs = ['Nom','Prénom','Ville'];
+                console.log(champs);
+                
                   
             </script>
 
