--- a/ex1.html
+++ b/ex1.html
@@ -7,9 +7,6 @@
     <title>exercice 1</title>
  </head>
  <body>
-
-    <h1>JS ALGO partie 1</h1>
-
    <h1>JS ALGO partie 1</h1>
 
    <p>Compter le nombre de caractères dans « Notre formation DL commence aujourd'hui »</p>
@@ -37,12 +34,46 @@
     <p>Ecrire un algorithme qui renvoie la table de multiplication d’un nombre passé en paramètre</p>
     <button onclick ="ex8()">Resultat EX 8</button>
 
-
     <p>Nous souhaitons savoir si une personne est imposable en fonction de son âge et de son sexe.
         Si la personne est une femme dont l’âge est compris entre 18 et 35 ans ou si c’est un homme de
         plus de 20 ans, alors celle-ci est imposable (sinon ce n’est pas le cas, « non imposable »).</p>
-    <button onclick ="ex8()">Resultat EX 9</button>
+    <button onclick ="ex9()">Resultat EX 9</button>
     
+    <p>A partir d’un montant à payer et d’une somme versée pour régler un achat, écrire l’algorithme qui
+        affiche à un utilisateur un rendu de monnaie en nombre de billets de 10 € et 5 €, de pièces de 2 € et
+        1 €.</p>
+    <button onclick ="ex10()">Resultat EX 10</button>
+
+    <p>Initialiser un tableau de x marques de voitures. Ecrire un algorithme permettant de parcourir ce
+        tableau et d’en afficher le contenu (une marque de voiture par ligne). Il est également demandé
+        d’afficher le nombre de marques de voitures présentes dans le tableau.
+        Exemple : tableau ➔ « Peugeot », « Renault », « BMW », « Mercedes »</p>
+    <button onclick ="ex11()">Resultat EX 11</button>
+
+    <p>A partir d’une fonction personnalisée et à partir d’un tableau de prénoms et de langue associée
+        (tableau contenant clé et valeur), dire bonjour aux différentes personnes dans leur langue
+        respective (français ➔ « Salut », anglais ➔ « Hello », espagnol ➔ « Hola »)
+        Exemple : tableau ➔ Mickaël -> FRA, Virgile -> ESP, Marie-Claire -> ENG
+        </p>
+    <button onclick ="ex12()">Resultat EX 12</button>
+
+    <p>Calculer la moyenne générale d'un élève dont les notes sont renseignées dans un tableau (pas de
+        coefficient). Elle devra être affichée avec 2 décimales.
+        </p>
+    <button onclick ="ex13()">Resultat EX 13</button>
+
+    <p>Calculer l'âge exact d'une personne à partir de sa date de naissance (en années, mois, jours).
+        </p>
+    <button onclick ="ex14()">Resultat EX 14</button>
+
+    <p>Créer une classe Personne (nom, prénom et date de naissance).
+        Instancier 2 personnes et afficher leurs informations : nom, prénom et âge.
+        $p1 = new Personne("DUPONT", "Michel", "1980-02-19") ;
+        $p2 = new Personne("DUCHEMIN", "Alice", "1985-01-17") ;        
+        </p>
+    <button onclick ="ex15()">Resultat EX 15</button>
+
+
    <footer>
        <p id="resultat"></p>
        <script>
@@ -117,6 +148,7 @@
                        console.log(`${number} * ${i} = ${result}`);
                    }
                }
+
        </script>
    </footer>
 </body>
