--- a/ex1.html
+++ b/ex1.html
@@ -142,7 +142,7 @@
                }
 
                function ex8(){ 
-                   const number = parseInt(prompt('Entrez un entier: '));
+                   const number = parseInt(prompt('Entrez un entier (vérifiez la console): '));
                    for(let i = 1; i <= 10; i++) {
                        const result = i * number;
                        console.log(`${number} * ${i} = ${result}`);
@@ -178,6 +178,13 @@
                     var reste = reste % 1;
                     document.getElementById("resultat").innerHTML = "Rendue de monnaie : " + dix + " billet de 10€ - " + cinq + " billet de 5€ - " + deux + " pièce de 2€ - " + un + " pièce de 1€ <br>";
                 }
+
+                function ex11(){
+                    var marques = ["Peugeot", " Renault", " BMW", " Mercedes"];
+                        document.getElementById("resultat").innerHTML = marques;
+                    }
+                
+
 
        </script>
    </footer>
