--- a/ex1.html
+++ b/ex1.html
@@ -278,19 +278,14 @@
                       }  
                    }  
                 }  
-                </script>  
-                </head>  
-                <body>  
+                </script>   
                 <center>  
-                <h2 style="color: #008CBA" align="center"> Calculer votre âge <br> <br> </h2>   
-                  
-                <b> Entrez une date de naissance : <input type=date id = dateNaissance>  </b>  
-                <span id = "message" style="color:rgb(131, 92, 92)"> </span> <br><br>    
+                <h2 style="color: #008CBA" align="center"> Calculer votre âge <br></h2>   
+                <b> Entrez une date de naissance : <input type=date id = dateNaissance>   
+                <span id = "message"></span> <br><br>    
                 <button type="submit" onclick = "ageCalculator()"> Calculer l'âge </button> <br><br>  
                 <h3 style="color:#008CBA" id="result" align="center"></h3>   
                 </center>  
-                </body>  
-                </html>  
        </script>
    </footer>
 </body>
