--- a/ex2.html
+++ b/ex2.html
@@ -37,6 +37,19 @@
         <INPUT TYPE="button" NAME="bouton" VALUE="Contrôler" onClick="_ville(ville)">
     </FORM>
     
+    <h3>Exercice 6</h3>
+    <p>Créer une fonction personnalisée permettant de remplir une liste déroulante à partir d'un tableau
+        de valeurs.</p>
+
+       <FORM NAME="form5">
+            <SELECT NAME="list">
+                <OPTION VALUE="1">Monsieur
+                <OPTION VALUE="2">Madame
+                <OPTION VALUE="3">Mademoiselle
+            </SELECT>
+            <INPUT TYPE="button"NAME="b" VALUE="Genre" onClick="liste(form5)"> 
+        </FORM>
+
     <h3>Exercice 7</h3>
     <p>Créer une fonction personnalisée permettant de générer des cases à cocher. On pourra préciser dans le tableau associatif si la case est cochée ou non.
         <FORM NAME="form4">
@@ -45,7 +58,7 @@
             <INPUT TYPE="CHECKBOX" NAME="check3" VALUE="3">Choix numéro 3<BR>
             <INPUT TYPE="CHECKBOX" NAME="check4" VALUE="4">Choix numéro 4<BR>
             <INPUT TYPE="button"NAME="but" VALUE="Récapituler" onClick="reponse(form4)">
-            </FORM>
+        </FORM>
     <h3><b>Exercice 8</b></h3>
     <p>Soit l’URL suivante : http://my.mobirise.com/data/userpic/764.jpg
         Créer une fonction personnalisée permettant d’afficher l’image N fois à l’écran</p>
@@ -100,7 +113,7 @@
   
                   }
 
-                // Exercice 4
+                // Exercice 5
                 function _name(nom){
                     var _nom = document.nom.input.value;
                     alert("Nom : " + _nom);
@@ -115,6 +128,10 @@
                     var test = document.ville.input.value;
                     alert("Ville : " + test);
                 }
+
+                // Exercice 6
+                function liste(form5) {
+                    alert("Genre : " + (form5.list.selectedIndex + 1)); }
 
                 // Exercice 7
                 function reponse(form4) {
