--- a/ex2.html
+++ b/ex2.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exercice 2</title>
+    <link rel="stylesheet" href="table.css">
+    <title>JS ALGO (partie 2)</title>
 </head>
 <body>
-    <h1>JS ALGO partie 2</h1>
 
-    <h3><b>Exercice 2</b></h3>
+    <h1><b>Exercice 2</b></h1>
     <p>Réaliser un algorithme permettant d’afficher le tableau HTML suivant (notez que le nom du pays
         s’affichera en majuscule et que le tableau est trié par ordre alphabétique du nom de pays) grâce à
         une fonction personnalisée.</p>
     <p id="ex2"></p>
 
-    <h3><b>Exercice 3</b></h3>
+    <h1><b>Exercice 3</b></h1>
     <p>Afficher un lien hypertexte permettant d’accéder au site d’Elan Formation. Le lien devra s’ouvrir
         dans un nouvel onglet (_blank)</p>
     <button onclick ="exe3()">Lien Elan Formation</button>
 
-    <h3><b>Exercice 5</b></h3>
+    <h1><b>Exercice 5</b></h1>
     <p>Créer une fonction personnalisée permettant de créer un formulaire de champs de texte en
         précisant le nom des champs associés.</p>
 
@@ -37,7 +37,7 @@
         <INPUT TYPE="button" NAME="bouton" VALUE="Contrôler" onClick="_ville(ville)">
     </FORM>
     
-    <h3>Exercice 6</h3>
+    <h1>Exercice 6</h1>
     <p>Créer une fonction personnalisée permettant de remplir une liste déroulante à partir d'un tableau
         de valeurs.</p>
 
@@ -50,7 +50,7 @@
             <INPUT TYPE="button"NAME="b" VALUE="Genre" onClick="liste(form5)"> 
         </FORM>
 
-    <h3>Exercice 7</h3>
+    <h1>Exercice 7</h1>
     <p>Créer une fonction personnalisée permettant de générer des cases à cocher. On pourra préciser dans le tableau associatif si la case est cochée ou non.
         <FORM NAME="form4">
             <INPUT TYPE="CHECKBOX" NAME="check1" VALUE="1">Choix numéro 1<BR>
@@ -60,12 +60,12 @@
             <INPUT TYPE="button"NAME="but" VALUE="Récapituler" onClick="reponse(form4)">
         </FORM>
 
-    <h3><b>Exercice 8</b></h3>
+    <h1><b>Exercice 8</b></h1>
     <p>Soit l’URL suivante : http://my.mobirise.com/data/userpic/764.jpg
         Créer une fonction personnalisée permettant d’afficher l’image N fois à l’écran</p>
     <button onclick ="exe8()">Resultat EX 8</button>
 
-    <h3><b>Exercice 9</b></h3>
+    <h1><b>Exercice 9</b></h1>
     <p>Créer une fonction personnalisée permettant d’afficher des boutons radio avec un tableau de
         valeurs en paramètre ("Monsieur","Madame","Mademoiselle").</p>
     Entrez votre choix :
@@ -76,7 +76,7 @@
     <INPUT TYPE="button"NAME="but" VALUE="Afficher votre genre" onClick="choixprop(form3)">
     </FORM>
     
-    <h3><b>Exercice 10</b></h3>
+    <h1><b>Exercice 10</b></h1>
     <p>En utilisant l’ensemble des fonctions personnalisées crées précédemment, créer un formulaire
         complet qui contient les informations suivantes : champs de texte avec nom, prénom, adresse email, ville, sexe et une liste de choix parmi lesquels on pourra sélectionner un intitulé de formation :
         « Développeur Logiciel », « Designer web », « Intégrateur » ou « Chef de projet ».
@@ -85,7 +85,7 @@
         </p>
     <button onclick ="exe10()">Resultat EX 10</button>
 
-    <h3><b>Exercice 13</b></h3>
+    <h1><b>Exercice 13</b></h1>
     <p>Créer une classe Voiture possédant les propriétés suivantes : marque, modèle, nbPortes et
         vitesseActuelle ainsi que les méthodes demarrer( ), accelerer( ) et stopper( ) en plus
         des accesseurs (get) et mutateurs (set) traditionnels. La vitesse initiale de chaque véhicule
