--- a/ex1.html
+++ b/ex1.html
@@ -4,52 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exercice 1</title>
+    <link rel="stylesheet" href="table.css">
+    <title>JS ALGO (partie 1)</title>
  </head>
  <body>
-   <h1>JS ALGO partie 1</h1>
-
+    <p id="resultat"></p>
+   <h1><b>Exercice 1</b></h1>
    <p>Compter le nombre de caractères dans « Notre formation DL commence aujourd'hui »</p>
    <button onclick ="ex1()">Resultat EX 1</button>
 
+   <h1><b>Exercice 2</b></h1>
    <p>Compter le nombre de caractères dans « Notre formation DL commence aujourd'hui »</p>
    <button onclick ="ex2()">Resultat EX 2</button>
 
+   <h1><b>Exercice 3</b></h1>
    <p>Dans la phrase « Notre formation DL commence aujourd'hui » remplacer le mot « aujourd’hui » par le mot « demain »</p>
    <button onclick ="ex3()">Resultat EX 3</button>
 
+   <h1><b>Exercice 4</b></h1>
    <p>Savoir si la phrase « Engage le jeu que je le gagne » est palindrome</p>
    <button onclick ="ex4()">Resultat EX 4</button>
 
+   <h1><b>Exercice 5</b></h1>
    <p>Écrire un algorithme qui convertie franc > euro</p>
    <button onclick ="ex5()">Resultat EX 5</button>
 
+   <h1><b>Exercice 6</b></h1>
    <p>Écrire un algorithme permettant de calculer un montant de facture à partir de la quantité
        d’articles, son prix hors taxe et un taux de TVA (exprimé en décimal. Ex : 20 % -> 0.2)</p>
    <button onclick ="ex6()">Resultat EX 6</button>
 
+   <h1><b>Exercice 7</b></h1>
    <p>Ecrire un algorithme permettant de renvoyer la catégorie d’un enfant en fonction de son âge</p>
    <button onclick ="ex7()">Resultat EX 7</button>
 
+   <h1><b>Exercice 8</b></h1>
     <p>Ecrire un algorithme qui renvoie la table de multiplication d’un nombre passé en paramètre</p>
     <button onclick ="ex8()">Resultat EX 8 (Console)</button>
 
+    <h1><b>Exercice 9</b></h1>
     <p>Nous souhaitons savoir si une personne est imposable en fonction de son âge et de son sexe.
         Si la personne est une femme dont l’âge est compris entre 18 et 35 ans ou si c’est un homme de
         plus de 20 ans, alors celle-ci est imposable (sinon ce n’est pas le cas, « non imposable »).</p>
     <button onclick ="ex9()">Resultat EX 9</button>
     
+    <h1><b>Exercice 10</b></h1>
     <p>A partir d’un montant à payer et d’une somme versée pour régler un achat, écrire l’algorithme qui
         affiche à un utilisateur un rendu de monnaie en nombre de billets de 10 € et 5 €, de pièces de 2 € et
         1 €.</p>
     <button onclick ="ex10()">Resultat EX 10</button>
 
+    <h1><b>Exercice 11</b></h1>
     <p>Initialiser un tableau de x marques de voitures. Ecrire un algorithme permettant de parcourir ce
         tableau et d’en afficher le contenu (une marque de voiture par ligne). Il est également demandé
         d’afficher le nombre de marques de voitures présentes dans le tableau.
         Exemple : tableau ➔ « Peugeot », « Renault », « BMW », « Mercedes »</p>
     <button onclick ="ex11()">Resultat EX 11</button>
 
+    <h1><b>Exercice 12</b></h1>
     <p>A partir d’une fonction personnalisée et à partir d’un tableau de prénoms et de langue associée
         (tableau contenant clé et valeur), dire bonjour aux différentes personnes dans leur langue
         respective (français ➔ « Salut », anglais ➔ « Hello », espagnol ➔ « Hola »)
@@ -58,17 +70,18 @@
     <button onclick ="ex12()">Resultat EX 12</button>
     <button>Resultat EX 12 variante (console)</button>
 
+    <h1><b>Exercice 13</b></h1>
     <p>Calculer la moyenne générale d'un élève dont les notes sont renseignées dans un tableau (pas de
         coefficient). Elle devra être affichée avec 2 décimales.
         </p>
     <button>Resultat EX 13 (Console)</button>
 
-    <p style="text-align:center">Calculer l'âge exact d'une personne à partir de sa date de naissance (jours, mois, années).
+    <h1><b>Exercice 14 [FREESTYLE]</b></h1>
+    <p>Calculer l'âge exact d'une personne à partir de sa date de naissance (jours, mois, années).
         </p>
 
 
    <footer>
-       <p id="resultat"></p>
        <script>
             // exercice 1
            function ex1(){
