--- a/ex1.html
+++ b/ex1.html
@@ -9,7 +9,7 @@
  </head>
  <body>
     <p id="resultat"></p>
-   <h1><b>Exercice 1</b></h1>
+   <h1><b>Exercice 1 TEST</b></h1>
    <p>Compter le nombre de caractères dans « Notre formation DL commence aujourd'hui »</p>
    <button onclick ="ex1()">Resultat EX 1</button>
 
